# ITI-RPi3

./: CMakeCache.txt  Makefile  README.md  cmake_install.cmake  pi_gpio  pi_gpio.cpp
SevenSegmentProject/: CMakeLists.txt
SevenSegmentProject/app/: main.cpp
SevenSegmentProject/include/: IStream.hpp  OStream.hpp  Pi_gpio.hpp  SevenSegment.hpp  Stream.hpp
SevenSegmentProject/src/: IStream.cpp  OStream.cpp  SevenSegment.cpp  Stream.cpp  pi_gpio.cpp
Shared/: Pi_gpio_S.h  main.cpp  my_app_arm  pi_gpio_S.cpp
temp/: temo  temo.cpp
